admin search z-index bug

--- a/templates/admin_multishop/css/admin_frontend.css
+++ b/templates/admin_multishop/css/admin_frontend.css
@@ -1,5 +1,5 @@
 
-#tx_multishop_admin_header_wrapper { position:fixed; left:0;top:0; min-width:990px; width:100%; text-align:left; margin:0; padding:0; z-index:10002; }
+#tx_multishop_admin_header_wrapper { position:fixed; left:0;top:0; min-width:990px; width:100%; text-align:left; margin:0; padding:0; z-index:10003; }
 #tx_multishop_admin_header_wrapper #tx_multishop_admin_header_bg { height:42px; background:url(../images/admin_bar_shadow.png) left top repeat-x; }
 #tx_multishop_admin_header_wrapper ul#tx_multishop_admin_header, 
 #tx_multishop_admin_header_wrapper ul#tx_multishop_admin_header ul { margin:0; padding:0; list-style:none; line-height:100% }
@@ -98,7 +98,7 @@ ul#ms_admin_maximize li { background:none; margin:0; padding:0; list-style:none;
 ul#ms_admin_maximize li a { display:block; float:left; width:85px; height:24px; background:url(../images/admin_maximize.png) left top no-repeat; font:11px Arial, Helvetica, sans-serif; color:#fff; margin:0; padding:5px 0 0 48px; }
 /* --- end of admin menu --- */
 
-#tx_multishop_admin_footer_wrapper { position:fixed; left:0;bottom:0;  min-width:990px; width:100%; height:42px; background:url(../images/admin_bar_footer_shadow.png) left top repeat-x; text-align:left; margin:0; z-index:1000; }
+#tx_multishop_admin_footer_wrapper { position:fixed; left:0;bottom:0;  min-width:990px; width:100%; height:42px; background:url(../images/admin_bar_footer_shadow.png) left top repeat-x; text-align:left; margin:0; z-index:10003; }
 
 #tx_multishop_admin_footer_wrapper ul#tx_multishop_admin_footer, 
 #tx_multishop_admin_footer_wrapper ul#tx_multishop_admin_footer ul { margin:0; padding:0; list-style:none; line-height:100% }
